# ml-lab

./: .gitignore  pyproject.toml
auth/: __init__.py  config.py  main.py  pyproject.toml
auth/alembic/: env.py
auth/alembic/versions/: 6fe635d878fd_initial_auth_migration.py
auth/db/: database.py
auth/src/: check_permissions.py  models.py  router.py  schemas.py  service.py
auth/src/logs/: logger_service.py
competitions/: pyproject.toml
gateway/: pyproject.toml
lessons/: Dockerfile  pyproject.toml
ml-playground/: pyproject.toml
