[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Nik1t7n <20nik.nosov21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-dotenv = "^1.0.1"
bcrypt = "^4.2.0"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
alembic = "^1.13.2"
psycopg-binary = "^3.2.1"
psycopg2-binary = "^2.9.9"
orjson = "^3.10.6"


[tool.poetry.group.dev.dependencies]
setuptools = "^72.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
